tests/ui/consts/issue-43105.stderr
error[E0015]: cannot call non-const function `xyz` in constants
  --> $DIR/issue-43105.rs:3:17
   |
LL | const NUM: u8 = xyz();
   |                 ^^^^^
   |
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0015`.
